Refactor: Simplify code with record and switch expressions